--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,14 @@
 				<div class="filter-button" 
 					 ng-click="setFilter('uncompleted')">Show uncompleted tasks</div>
 			</div>
+			<div class="filter-title" ng-switch="filterBy">
+				<div class="filter-button" 
+					 ng-switch-when="all">All tasks:</div>
+				<div class="filter-button" 
+					 ng-switch-when="completed">Completed tasks:</div>
+				<div class="filter-button" 
+					 ng-switch-when="uncompleted">Uncompleted tasks:</div>
+			</div>
 			<div class="task-list">
 				<div class="task" ng-repeat="task in taskList | filterTasks : filterBy track by $index">
 					<div>- {{task.name}}</div>
